feat: Dockerfile, Jenkinsfile, build.gradle update